--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.7",
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20.3.1",
     "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
@@ -30,6 +33,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "mongodb": "^5.6.0",
     "validator": "^13.9.0"
   }
 }
