--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,14 @@
         "module": "commonjs",
         "target": "ES2020",
         "esModuleInterop": true,
-        "allowJs": true,
         "strictNullChecks": true,
-    }
+    },
+    "include": [
+        "src"
+    ],
+    "exclude": [
+        "**/*.spec.ts",
+        "**/*.test.ts"
+    ]
+    
 }
