--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.6.0",
     "validator": "^13.9.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
