--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "target": "ES2020",
         "esModuleInterop": true,
         "strictNullChecks": true,
+        "rootDir": "src"
     },
     "include": [
         "src"
