--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,17 @@
         "target": "ES2020",
         "esModuleInterop": true,
         "strictNullChecks": true,
-        "rootDir": "src"
+        "rootDir": "src",
+        "baseUrl": "src",
+        "paths": {
+            "@/*": ["*"]
+        }
     },
     "include": [
         "src"
     ],
     "exclude": [
-        "**/*.spec.ts",
-        "**/*.test.ts"
+       
     ]
     
 }
