--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.5",
     "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "eslint": "^8.43.0",
@@ -47,6 +48,7 @@
     "jsonwebtoken": "^9.0.1",
     "module-alias": "^2.2.3",
     "mongodb": "^5.6.0",
+    "swagger-ui-express": "^5.0.0",
     "validator": "^13.9.0"
   },
   "engines": {
